2025-01-03  Saruman the White  <eker@eker10>

	* freeTheory.hh: deleted forward decls for classes
	FreeNullaryRhsAutomaton, FreeUnaryRhsAutomaton,
	FreeBinaryRhsAutomaton, FreeTernaryRhsAutomaton

	* freeDagNode.hh (class FreeDagNode): unfriend
	FreeUnaryRhsAutomaton, FreeBinaryRhsAutomaton,
	FreeTernaryRhsAutomaton

	* freeNullaryRhsAutomaton.cc: deleted

	* freeNullaryRhsAutomaton.hh: deleted

	* freeUnaryRhsAutomaton.cc: deleted

	* freeUnaryRhsAutomaton.hh: deleted

	* freeBinaryRhsAutomaton.cc: deleted

	* freeBinaryRhsAutomaton.hh: deleted

	* freeTernaryRhsAutomaton.cc: deleted

	* freeTernaryRhsAutomaton.hh: deleted

	* freeTerm.cc (FreeTerm::compileRhs2): use FreeFastRhsAutomaton

	* freeFastRhsAutomaton.hh (FreeFastRhsAutomaton): created class
	template

	* freeDagNode.hh (fillArgs): added function template

2024-12-28  Saruman the White  <eker@eker10>

	* freeUnarySymbol.cc: deleted

	* freeUnarySymbol.hh: deleted

	* freeBinarySymbol.cc: deleted

	* freeBinarySymbol.hh: deleted

	* freeTernarySymbol.cc: deleted

	* freeTernarySymbol.hh: deleted

	* freeDagNode.hh (class FreeDagNode): unfriend FreeUnarySymbol,
	FreeBinarySymbol, FreeTernarySymbol

	* freeSymbol.cc (FreeSymbol::newFreeSymbol): use template class
	FreeSimpleSymbol

	* freeSimpleSymbol.hh (FreeSimpleSymbol): created

	* freeDagNode.hh (reduceArgs): added compile-time recursive
	function template

2024-06-05  Steven M. Eker  <eker@eker10>

	* freeFast3RhsAutomaton.cc: fix comment
	(FreeFast3RhsAutomaton::remapIndices): code cleaning
	(FreeFast3RhsAutomaton::replace): code cleaning
	(FreeFast3RhsAutomaton::fillOutArgs): use inline rather than
	local_inline

	* freeUnaryRhsAutomaton.cc: fix comment

	* freeUnaryRhsAutomaton.hh: fix comment

	* freeBinaryRhsAutomaton.cc: fix comment

	* freeBinaryRhsAutomaton.hh: fix comment

	* freeTernarySymbol.cc: fix comment

	* freeBinarySymbol.cc: fix comment

===================================Maude163===========================================
